# escalation-engine

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  WHAT_I_DID_NOT_BUILD.md
examples/bank_scenario/: services.yaml  teams.yaml
registry/: policies.yaml  services.yaml  teams.yaml
src/escalation/: __init__.py  __main__.py  audit.py  cli.py  loader.py  models.py  output.py  resolver.py
tests/: test_audit.py  test_cli.py  test_loader.py  test_resolver.py
