[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incident-escalation-engine"
version = "0.1.0"
description = "CLI tool for incident escalation chain resolution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Oscar Sanchez" },
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.scripts]
escalation = "escalation.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["src/escalation"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
